--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,19 @@
 <h1>
   {{title}}
 </h1>
+
+<ul>
+  <li class="text" *ngFor="let item of items | async">
+    {{item.name}}
+
+    {{item.$key}}
+  </li>
+</ul>
+
+<img [src]="image">
+
+<img src="assets/images/black-ribbon-right.png" />
+
+
+<input type="file" name="pic" accept="image/*">
+<input type="submit" (click)="submit()">
