added form validation including file upload size and type

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,12 @@
       DREAM ACTION
     </a>
     <ul class="nav navbar-nav float-lg-right">
-
+      <li class="nav-item">
+        <a  class="nav-link" href="https://dreamaction.co/" routerLinkActive="active">Blog</a>
+      </li>
+      <li class="nav-item">
+        <a  class="nav-link" href="https://dreamaction.co/" routerLinkActive="active">FAQs</a>
+      </li>
       <li class="nav-item">
         <a  class="nav-link" routerLink="/apply" routerLinkActive="active">Apply</a>
       </li>
