--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,6 @@
 <p>
   home works!
 </p>
-asd
-<nav>
-  Home
-  <a routerLink="/" routerLinkActive="active">Root</a>
-  <a routerLink="/apply" routerLinkActive="active">Apply</a>
-</nav>
+
+
+<!-- ADD LANDING PAGE !!! -->
