first try on home

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,106 @@
-<p i18n="User welcome|An introduction header for this sample">
-  home works!
-</p>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-4 col">
+      <div class="">
+        <img src="assets/images/bookcover-pr.jpg" class="img-fluid bookcover" alt="" />
+      </div>
+    </div>
+    <div class="col-sm-8 col">
+      <div class="">
+        <h1 class="display-4">
+          1 เดือน
+          1 Portfolio Review
+        </h1>
+        <hr>
+
+        <p class="lead main-p">
+          ลุ้นรับ ... คำแนะนำเจาะรายบุคคล
+          ที่จะช่วยพัฒนา Portfolio ของคุณให้เจ๋ง
+          และน่าภูมิใจ เพื่อเอาไปคว้างานในฝัน
+          เดือนละ 1 คนเท่านั้น !!
+        </p>
+
+        <hr class="main-p">
+
+        <div class="submit-block">
+          <a href="#" class="text-xs-center">
+            <img src="assets/images/submitbutton1-01.png" width="120">
+          </a>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container-fluid video-container">
+  <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://www.youtube.com/embed/mcZSqWAw3sQ' frameborder='0' allowfullscreen></iframe></div>
+</div>
+
+<!-- WHY Section -->
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-sm-6">
+      WHY
+    </div>
+    <div class="col-sm-6">
+      <h2 class="text-xs-center">THIS FIGHT IS MORE THAN TO</h2>
+      <h2 class="display-1 text-xs-center">GET A JOB</h2>
+      <h3 class="text-xs-center">IT UNLEASHS YOUR POTENTIAL</h3>
+      <h4 class="text-xs-center">TO LEARN THE BEST OF YOU NOW AND THEN YOU CAN BE</h4>
+      <h2 class="display-4 text-xs-center">PROUD OF YOURSELF</h2>
+      <h4 class="text-xs-center">THAT YOU NOW READY TO FLY TO WHERE YOU WANT TO BE.</h4>
+    </div>
+  </div>
+</div>
+<!-- End WHY Section -->
 
 
-<!-- ADD LANDING PAGE !!! -->
+<!-- WHAT Section -->
+<!-- <div class="container-fluid">
+  <div class="row">
+    <div class="col col-sm-4 what-col first-what-col">
+      <div class="">
+        <h2 class="display-4 text-xs-center">
+          WHAT YOU'LL LEARN
+        </h2>
+      </div>
+    </div>
+    <div class="col col-sm-4 what-col first-what-col">
+      <div class="">
+        <h2 class="display-4 text-xs-center">
+          SCORES
+        </h2>
+      </div>
+    </div>
+    <div class="col col-sm-4 what-col first-what-col">
+      <div class="">
+        <h2 class="display-4 text-xs-center">
+          Resources
+        </h2>
+      </div>
+    </div>
+    <div class="col col-sm-4 what-col first-what-col">
+      <div class="">
+        <h2 class="display-4 text-xs-center">
+          Strengths
+        </h2>
+      </div>
+    </div>
+    <div class="col col-sm-4 what-col first-what-col">
+      <div class="">
+        <h2 class="display-4 text-xs-center">
+          Weaknesses
+        </h2>
+      </div>
+    </div>
+    <div class="col col-sm-4 what-col first-what-col">
+      <div class="">
+        <h2 class="display-4 text-xs-center">
+          Opportunities
+        </h2>
+      </div>
+    </div>
+  </div>
+</div> -->
+<!-- END WHAT Section -->
