--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,24 @@
 .main-nav-bg {
   background-color: black;
+  height: 60px;
+}
+
+
+.navbar-brand
+{
+    position: absolute;
+    width: 100%;
+    left: 0;
+    top: 0;
+    text-align: center;
+    margin:0 auto;
+    padding: 0px;
+}
+.navbar-toggle {
+    z-index:3;
+}
+
+
+.navbar-nav {
+  padding: 20 0;
 }
