--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,24 @@
   <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"></button>
   <div class="collapse navbar-toggleable-md" id="navbarResponsive">
     <a class="navbar-brand" routerLink="/">
-      <img src="assets/images/da-logo.jpg" width="30" height="30" class="d-inline-block" alt="">
-      DREAM ACTION
+      <img src="assets/images/da-review-logo-01.jpg" height="60" class="d-inline-block" alt="">
     </a>
+
+    <ul class="nav navbar-nav">
+      <li class="nav-item">
+        <a  class="nav-link">Intro</a>
+      </li>
+      <li class="nav-item">
+        <a  class="nav-link">Why?</a>
+      </li>
+      <li class="nav-item">
+        <a  class="nav-link">What?</a>
+      </li>
+      <li class="nav-item">
+        <a  class="nav-link">Apply</a>
+      </li>
+    </ul>
+
     <ul class="nav navbar-nav float-lg-right">
       <li class="nav-item">
         <a  class="nav-link" href="https://dreamaction.co/" routerLinkActive="active">Blog</a>
@@ -18,17 +33,6 @@
     </ul>
   </div>
 </nav>
-
-
-
-
-<div class="container">
-  <div class="row">
-    <div class="col">
-
-    </div>
-  </div>
-</div>
 
 <!-- Routed views go here -->
 <router-outlet></router-outlet>
