new layout concept

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -38,69 +38,236 @@
 </div>
 
 <!-- WHY Section -->
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-sm-6">
-      WHY
-    </div>
-    <div class="col-sm-6">
-      <h2 class="text-xs-center">THIS FIGHT IS MORE THAN TO</h2>
-      <h2 class="display-1 text-xs-center">GET A JOB</h2>
-      <h3 class="text-xs-center">IT UNLEASHS YOUR POTENTIAL</h3>
-      <h4 class="text-xs-center">TO LEARN THE BEST OF YOU NOW AND THEN YOU CAN BE</h4>
-      <h2 class="display-4 text-xs-center">PROUD OF YOURSELF</h2>
-      <h4 class="text-xs-center">THAT YOU NOW READY TO FLY TO WHERE YOU WANT TO BE.</h4>
+<div class="container-fluid why-section">
+  <div class="container">
+    <div class="row">
+      <div class="col col-sm-6 text-xs-center">
+        WHY
+      </div>
+      <div class="col col-sm-6 text-xs-center">
+        <div class="">
+          <h2 class="">THIS FIGHT IS MORE THAN TO</h2>
+          <h2 class="display-1">GET A JOB</h2>
+          <h3 class="">IT UNLEASHS YOUR POTENTIAL</h3>
+          <h4 class="">TO LEARN THE BEST OF YOU NOW AND THEN YOU CAN BE</h4>
+          <h2 class="display-4">PROUD OF YOURSELF</h2>
+          <h4 class="">THAT YOU NOW READY TO FLY TO WHERE YOU WANT TO BE.</h4>
+        </div>
+      </div>
     </div>
   </div>
 </div>
 <!-- End WHY Section -->
 
-
-<!-- WHAT Section -->
-<!-- <div class="container-fluid">
+<div class="container">
   <div class="row">
-    <div class="col col-sm-4 what-col first-what-col">
-      <div class="">
-        <h2 class="display-4 text-xs-center">
-          WHAT YOU'LL LEARN
-        </h2>
-      </div>
+    <div class="col">
+      <h1 class="display-4">
+        Lorem ipsum
+      </h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
     </div>
-    <div class="col col-sm-4 what-col first-what-col">
-      <div class="">
-        <h2 class="display-4 text-xs-center">
-          SCORES
-        </h2>
+  </div>
+</div>
+
+
+<div class="container-fluid what-section">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-3 text-xs-center">
+        <img src="/assets/images/sq-imgonly2.png" class="img-circle"  width="70px" alt="" />
+        <h4>
+          Lorem ipsum
+        </h4>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        </p>
       </div>
-    </div>
-    <div class="col col-sm-4 what-col first-what-col">
-      <div class="">
-        <h2 class="display-4 text-xs-center">
-          Resources
-        </h2>
+
+      <div class="col-sm-3 text-xs-center">
+        <img src="/assets/images/sq-imgonly4.png" class="img-circle"  width="70px" alt="" />
+        <h4>
+          Lorem ipsum
+        </h4>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        </p>
       </div>
-    </div>
-    <div class="col col-sm-4 what-col first-what-col">
-      <div class="">
-        <h2 class="display-4 text-xs-center">
-          Strengths
-        </h2>
+
+      <div class="col-sm-3 text-xs-center">
+        <img src="/assets/images/sq-imgonly5.png" class="img-circle"  width="70px" alt="" />
+        <h4>
+          Lorem ipsum
+        </h4>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        </p>
       </div>
-    </div>
-    <div class="col col-sm-4 what-col first-what-col">
-      <div class="">
-        <h2 class="display-4 text-xs-center">
-          Weaknesses
-        </h2>
-      </div>
-    </div>
-    <div class="col col-sm-4 what-col first-what-col">
-      <div class="">
-        <h2 class="display-4 text-xs-center">
-          Opportunities
-        </h2>
+
+      <div class="col-sm-3 text-xs-center">
+        <img src="/assets/images/sq-imgonly5.png" class="img-circle"  width="70px" alt="" />
+        <h4>
+          Lorem ipsum
+        </h4>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        </p>
       </div>
     </div>
   </div>
-</div> -->
-<!-- END WHAT Section -->
+</div>
+
+
+<!-- Timeline .... -->
+<section class="timeline">
+  <ul>
+    <li>
+      <div>
+        <time>1934</time> At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
+      </div>
+    </li>
+    <li>
+      <div>
+        <time>1937</time> Proin quam velit, efficitur vel neque vitae, rhoncus commodo mi. Suspendisse finibus mauris et bibendum molestie. Aenean ex augue, varius et pulvinar in, pretium non nisi.
+      </div>
+    </li>
+    <li>
+      <div>
+        <time>1940</time> Proin iaculis, nibh eget efficitur varius, libero tellus porta dolor, at pulvinar tortor ex eget ligula. Integer eu dapibus arcu, sit amet sollicitudin eros.
+      </div>
+    </li>
+    <li>
+      <div>
+        <time>1943</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
+      </div>
+    </li>
+    <li>
+      <div>
+        <time>1946</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
+      </div>
+    </li>
+    <li>
+      <div>
+        <time>1956</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
+      </div>
+    </li>
+    <li>
+      <div>
+        <time>1957</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
+      </div>
+    </li>
+    <li>
+      <div>
+        <time>1967</time> Aenean condimentum odio a bibendum rhoncus. Ut mauris felis, volutpat eget porta faucibus, euismod quis ante.
+      </div>
+    </li>
+    <li>
+      <div>
+        <time>1977</time> Vestibulum porttitor lorem sed pharetra dignissim. Nulla maximus, dui a tristique iaculis, quam dolor convallis enim, non dignissim ligula ipsum a turpis.
+      </div>
+    </li>
+    <li>
+      <div>
+        <time>1985</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
+      </div>
+    </li>
+    <li>
+      <div>
+        <time>2000</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
+      </div>
+    </li>
+    <li>
+      <div>
+        <time>2005</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
+      </div>
+    </li>
+  </ul>
+</section>
+
+<!-- Testimonial-section -->
+<div class="container-fluid testimonial-section">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6 text-xs-center">
+        <img src="/assets/images/da-logo.jpg" class="img-circle"  width="100px" alt="" />
+        <h4>Lorem ipsum dolor</h4>
+        <h6>Ut enim ad minim</h6>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+      </div>
+      <div class="col-sm-6 text-xs-center">
+        <img src="/assets/images/da-logo.jpg" class="img-circle"  width="100px" alt="" />
+        <h4>Lorem ipsum dolor</h4>
+        <h6>Ut enim ad minim</h6>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container-fluid instruction-section">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+        <ul>
+          <li>
+            <h4>
+              Lorem ipsum dolor sit amet,
+            </h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+          </li>
+          <li>
+            <h4>
+              Lorem ipsum dolor sit amet,
+            </h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+          </li>
+          <li>
+            <h4>
+              Lorem ipsum dolor sit amet,
+            </h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+          </li>
+          <li>
+            <h4>
+              Lorem ipsum dolor sit amet,
+            </h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<!-- submit section -->
+<div class="container submit-section">
+  <div class="row">
+    <div class="col col-xs-12">
+      <div>
+        <h2 class="display-1">
+          Get in touch
+        </h2>
+        <div class="">
+          <a href="#">
+            <img src="assets/images/submitbutton-large-01.png" width="300">
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
