--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -35,22 +35,141 @@ hr {
 }
 
 
+/* WHY SECTION */
+.why-section {
+  background-image: url(../assets/images/bg/photo-1461695008884-244cb4543d74.jpeg);
+  background-position: center center;
+  background-size: cover;
+  height:100vh;
+}
+
+.why-section .container, .why-section .row  {
+  height:100vh;
+}
+
+
 
 
 /* WHAT Section */
-.what-col {
-  height: 200px;
-  background-color: gray;
+.what-section {
+  background-image: url(../assets/images/bg/photo-1444882158336-bcfbd9298309.jpeg);
+  background-position: center center;
+  background-size: cover;
+  background-attachment:fixed;
   color: white;
+}
+
+
+.what-col {
+  /*height: 200px;*/
+  background-color: white;
+  color: black;
 }
 
 .first-what-col {
   background-color: black;
   color: white;
 }
+
+.last-what-col {
+  background-color: gray;
+  color:white;
+}
 /* END WHAT Section */
 
+/* Timeline */
+.timeline {
+  background-image: url(../assets/images/bg/photo-1469751434990-62dd6a1c5b29.jpeg);
+  background-position: center center;
+  background-size: cover;
+  background-attachment:fixed;
 
+  padding: 20px;
+}
+.timeline ul li {
+  list-style-type: none;
+  position: relative;
+  width: 6px;
+  margin: 0 auto;
+  padding-top: 50px;
+  background: #fff;
+}
+
+.timeline ul li::after {
+  content: '';
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  transform: translateX(-50%);
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background: inherit;
+}
+
+.timeline ul li div {
+  position: relative;
+  bottom: 0;
+  width: 400px;
+  padding: 15px;
+  background: #F45B69;
+}
+
+.timeline ul li div::before {
+  content: '';
+  position: absolute;
+  bottom: 7px;
+  width: 0;
+  height: 0;
+  border-style: solid;
+}
+
+.timeline ul li:nth-child(odd) div {
+  left: 45px;
+}
+
+.timeline ul li:nth-child(odd) div::before {
+  left: -15px;
+  border-width: 8px 16px 8px 0;
+  border-color: transparent #F45B69 transparent transparent;
+}
+
+.timeline ul li:nth-child(even) div {
+  left: -439px;
+}
+
+.timeline ul li:nth-child(even) div::before {
+  right: -15px;
+  border-width: 8px 0 8px 16px;
+  border-color: transparent transparent transparent #F45B69;
+}
+
+
+/* testimonial-section */
+.testimonial-section {
+  background-image: url(../assets/images/bg/photo-1430417934865-589b63ad5c00.jpeg);
+  background-position: center center;
+  background-size: cover;
+}
+
+/* instruction-section */
+.instruction-section {
+  background-image: url(../assets/images/bg/photo-1443641723753-250ff9bb3c83.jpeg);
+  background-position: center center;
+  background-size: cover;
+  background-attachment:fixed;
+}
+
+.instruction-section .container {
+  margin: 20px auto;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+}
+
+/* submit-section */
+.submit-section .row{
+  height: 100vh;
+}
 
 @media screen and (max-width: 991px) {
   .main-p {
