--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -255,17 +255,19 @@
 
 
 <!-- submit section -->
-<div class="container submit-section">
-  <div class="row">
-    <div class="col col-xs-12">
-      <div>
-        <h2 class="display-1">
-          Get in touch
-        </h2>
-        <div class="">
-          <a href="#">
-            <img src="assets/images/submitbutton-large-01.png" width="300">
-          </a>
+<div class="container-fluid submit-section">
+  <div class="container">
+    <div class="row">
+      <div class="col col-xs-12">
+        <div>
+          <h2 class="display-1">
+            Get in touch
+          </h2>
+          <div>
+            <a href="#" class="submit-button">
+              <img src="assets/images/submitbutton-large-01.png" width="300">
+            </a>
+          </div>
         </div>
       </div>
     </div>
