--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container main-container">
   <div class="row">
     <div class="col-sm-4 col">
       <div class="">
