removed temp menu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
       <img src="assets/images/da-review-logo-01.jpg" height="60" class="d-inline-block" alt="">
     </a>
 
-    <ul class="nav navbar-nav">
+    <!-- <ul class="nav navbar-nav">
       <li class="nav-item">
         <a  class="nav-link">Intro</a>
       </li>
@@ -18,7 +18,7 @@
       <li class="nav-item">
         <a  class="nav-link">Apply</a>
       </li>
-    </ul>
+    </ul> -->
 
     <ul class="nav navbar-nav float-lg-right">
       <li class="nav-item">
